<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B07D2A"
    tools:context=".Info">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="28dp"
        android:background="#000000"
        android:hint="@string/MenuButton"
        android:onClick="onClickMenu"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editContent2"
        android:layout_width="296dp"
        android:layout_height="194dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="352dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:editable="false"
        android:ems="10"
        android:hint="@string/InfoContent"
        android:inputType="textMultiLine|textPersonName"
        android:paddingTop="0dp"
        android:paddingBottom="100dp"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:hint="@string/Helpplz"
        android:textColorHint="#000000"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>