<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B07D2A"
    android:paddingBottom="40dp"
    tools:context=".EditActivity"
    tools:ignore="MissingClass">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="153dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/AddReciepeText"
        android:focusable="true"
        android:onClick="onClickAddImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/ConfirmEdit"
        android:layout_width="157dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:hint="@string/SaveButton"
        android:onClick="onClickSave"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MenuButton"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:hint="@string/editTitle_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#79474747"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/editTextBackground"
        android:ems="10"
        android:hint="@string/editIngredients_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#74474747"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="270dp"
        android:layout_height="156dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="120dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:ems="10"
        android:hint="@string/editContent_hint"
        android:inputType="textMultiLine|textPersonName"
        android:paddingTop="0dp"
        android:paddingBottom="100dp"
        android:textAlignment="center"
        android:textColorHint="#68474647"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editIngredients"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/editIngredients"
        app:layout_constraintTop_toBottomOf="@+id/editIngredients"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/MenuButton"
        android:layout_width="157dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:hint="@string/MenuButton"
        android:onClick="onClickMenu"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="325dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/AddReciepeText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myImageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imMyImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@android:drawable/editbox_background"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_name"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imButtonEditImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/AddReciepeText"
            android:onClick="onClickEditImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/imButtonDeleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/NoRecipes"
            android:onClick="onClickDeleteImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>